APR-55 fix sidebar height

--- a/src/infi/app_repo/webserver/static/css/apprepo.css
+++ b/src/infi/app_repo/webserver/static/css/apprepo.css
@@ -84,7 +84,9 @@ span.ver {
 }
 
 .sidebar-nav {
-  top: 20px !important;
+  padding-top: 20px;
+  padding-bottom: 74px;
+  height: initial !important;
 }
 
 a, .sidebar-nav li a {
