--- a/src/infi/app_repo/webserver/templates/home.html
+++ b/src/infi/app_repo/webserver/templates/home.html
@@ -107,6 +107,18 @@
                     info: false,
                     autoWidth: true
                 });
+
+                $('div.copylink i').tooltip()
+
+                $('div.copylink i').click(function() {
+                    $(this).tooltip('hide')
+                              .attr('data-original-title', 'Copied!')
+                              .tooltip('fixTitle')
+                              .tooltip('toggle');
+                    $(this).attr('data-original-title', 'Click to copy');
+                });
+
+                $('[data-toggle="tooltip"]').tooltip();
             });
 
             function humanFileSize(bytes, si) {
