APR-66 changing copy tooltip title

--- a/src/infi/app_repo/webserver/templates/home.html
+++ b/src/infi/app_repo/webserver/templates/home.html
@@ -115,7 +115,7 @@
                               .attr('data-original-title', 'Copied!')
                               .tooltip('fixTitle')
                               .tooltip('toggle');
-                    $(this).attr('data-original-title', 'Click to copy');
+                    $(this).attr('data-original-title', 'Copy to Clipboard');
                 });
 
                 $('[data-toggle="tooltip"]').tooltip();
