--- a/src/infi/app_repo/webserver/templates/home_package_instructions.html
+++ b/src/infi/app_repo/webserver/templates/home_package_instructions.html
@@ -13,7 +13,7 @@
         <div class="tab-pane fade" id="{{ package.name }}-{{platform}}">
     {% endif %}
     <h3>Instructions for {{ platform_name(platform) }}</h3>
-    {% if platform in ("redhat", "oracle", "centos", "ubuntu", "suse") %}
+    {% if platform in ("redhat", "oracle", "centos", "ubuntu", "suse") and package.requires_setup %}
         <h4>Setup (first time only)</h4>
         <div class="copylink">
             <input class="cmd" value="curl -s {{ setup_url }} | sudo sh -" readonly="readonly">
@@ -25,16 +25,16 @@
     {% endif %}
     {% if value.install %}
         <h4>Install</h4>
-        {{ instructions_content_part(platform, value.install, host_url) }}
+        {{ instructions_content_part(platform, value.install, value.installable, host_url) }}
     {% endif %}
     {% if value.upgrade %}
         <h4>Upgrade</h4>
-        {{ instructions_content_part(platform, value.upgrade, host_url) }}
+        {{ instructions_content_part(platform, value.upgrade, value.installable, host_url) }}
     {% endif %}
     </div>
 {% endmacro %}
 
-{% macro instructions_content_part(platform, instructions, host_url) %}
+{% macro instructions_content_part(platform, instructions, installable, host_url) %}
     {% if platform == 'vmware' %}
         {% if instructions.notes %}
             {% for note in instructions.notes %}
@@ -52,7 +52,11 @@
                 <i class="glyphicon glyphicon-copy" data-toggle="tooltip" data-placement="bottom" title="Copy to Clipboard"></i>
             </div>
         {% elif instructions.download_link %}
-            <a href="{{ instructions.download_link }}">Download</a> the installer and run it.
+            {% if installable %}
+                <a href="{{ instructions.download_link }}">Download</a> the installer and run it.
+            {% else %}
+                <a href="{{ instructions.download_link }}">Download</a> the executable and run it.
+            {% endif %}
         {% else %}
             {{ instructions }}
         {% endif %}
