APR-109 Allow HTML in custom installation instructions

--- a/src/infi/app_repo/webserver/templates/home_package_instructions.html
+++ b/src/infi/app_repo/webserver/templates/home_package_instructions.html
@@ -58,7 +58,7 @@
                 <a href="{{ instructions.download_link }}">Download</a> the executable and run it.
             {% endif %}
         {% else %}
-            {{ instructions }}
+            {{ instructions|safe }}
         {% endif %}
     {% endif %}
 {% endmacro %}
