APR-120 support upload of Docker images

--- a/src/infi/app_repo/webserver/templates/home_package_instructions.html
+++ b/src/infi/app_repo/webserver/templates/home_package_instructions.html
@@ -86,6 +86,8 @@
         Ubuntu
     {% elif platform == "python" %}
         Python
+    {% elif platform == "docker" %}
+        Docker
     {% elif platform == "python-docs" %}
          Python Docs
     {% else %}
