APR-120 code review APR-4 changes
Added default installation instruction to docker images
(download tarball and run through docker import command).

--- a/src/infi/app_repo/webserver/templates/home_package_instructions.html
+++ b/src/infi/app_repo/webserver/templates/home_package_instructions.html
@@ -55,7 +55,21 @@
             {% if installable %}
                 <a href="{{ instructions.download_link }}">Download</a> the installer and run it.
             {% else %}
-                <a href="{{ instructions.download_link }}">Download</a> the executable and run it.
+                {% if platform == 'docker' %}
+                    <ul>
+                        <li>
+                            <a href="{{ instructions.download_link }}">Download</a> the tarball.
+                        </li>
+                        <li>
+                            <div class="copylink">
+                                <input class="cmd" value="docker import {{ instructions.download_link.split('/')[-1] }}" readonly="readonly">
+                                <i class="glyphicon glyphicon-copy" data-toggle="tooltip" data-placement="bottom" title="Copy to Clipboard"></i>
+                            </div>
+                        </li>
+                    </ul>
+                {% else%}
+                    <a href="{{ instructions.download_link }}">Download</a> the executable and run it.
+                {% endif %}
             {% endif %}
         {% else %}
             {{ instructions|safe }}
